Fix Custom select control component dropdown arrow spacing (#22925)
* Add story for long option labels

* Fix to allow sufficient space for down arrow icon to the right of selected option text

* Update packages/components/src/custom-select-control/style.scss


* Update packages/components/src/custom-select-control/style.scss

--- a/packages/components/src/custom-select-control/style.scss
+++ b/packages/components/src/custom-select-control/style.scss
@@ -16,6 +16,12 @@
 	position: relative;
 	text-align: left;
 
+	// For all button sizes allow sufficient space for the
+	// dropdown "arrow" icon to display.
+	&.components-custom-select-control__button {
+		padding-right: $icon-size;
+	}
+
 	&:focus:not(:disabled) {
 		border-color: $theme-color;
 		box-shadow: 0 0 0 ($border-width-focus - $border-width) $theme-color;
